--- a/style/roads-casing.yaml
+++ b/style/roads-casing.yaml
@@ -27,31 +27,31 @@ paint:
   line-width:
     - interpolate
     - - exponential
-      - 1.2
+      - 1.35
     - - zoom
     - 12
     - - match
-      - ["get", "waterway"]
+      - ["get", "highway"]
       - motorway
-      - 5
+      - 4
       - trunk
-      - 4
+      - 3.5
       - primary
-      - 4
+      - 3.5
       - secondary
-      - 3
+      - 2
       - tertiary
-      - 3
+      - 2
       - unclassified
-      - 2
+      - 1.5
       - residential
-      - 2
+      - 1.5
       - living_street
-      - 2
-      - 2
+      - 1.5
+      - 1.5
     - 20
     - - match
-      - ["get", "waterway"]
+      - ["get", "highway"]
       - motorway
       - 40
       - trunk
