--- a/spirit.yaml
+++ b/spirit.yaml
@@ -15,5 +15,6 @@ layers:
   - !!inc/file style/water-lines.yaml
   - !!inc/file style/roads-casing.yaml
   - !!inc/file style/roads-fill.yaml
+  - !!inc/file style/transit-points.yaml
   - !!inc/file style/water-line-text.yaml
 glyphs: https://go-spatial.github.io/carto-assets/fonts/{fontstack}/{range}.pbf
