Rewrite get expressions
Using an inline form makes it clearer what belongs to what

--- a/style/transit-points.yaml
+++ b/style/transit-points.yaml
@@ -5,8 +5,7 @@ type: symbol
 layout:
   icon-image: 
     - match
-    - - get
-      - mode
+    - [get, mode]
     - bus
     - - case
       - - get
