--- a/spirit.yaml
+++ b/spirit.yaml
@@ -16,6 +16,10 @@ layers:
   - !!inc/file style/transport-casing.yaml
   - !!inc/file style/transport-fill.yaml
   - !!inc/file style/transit-points.yaml
+  - !!inc/file style/admin-2.yaml
+  - !!inc/file style/admin-4.yaml
+  - !!inc/file style/admin-6.yaml
+  - !!inc/file style/admin-8.yaml
   - !!inc/file style/water-line-text.yaml
   - !!inc/file style/building-names.yaml
 glyphs: https://go-spatial.github.io/carto-assets/fonts/{fontstack}/{range}.pbf
