Restyle admin boundaries

--- a/spirit.yaml
+++ b/spirit.yaml
@@ -16,6 +16,7 @@ layers:
   - !!inc/file style/transport-casing.yaml
   - !!inc/file style/transport-fill.yaml
   - !!inc/file style/transit-points.yaml
+  - !!inc/file style/admin-background.yaml
   - !!inc/file style/admin-2.yaml
   - !!inc/file style/admin-4.yaml
   - !!inc/file style/admin-6.yaml
