--- a/style/admin-2.yaml
+++ b/style/admin-2.yaml
@@ -7,13 +7,15 @@ layout:
   line-join: bevel
   line-cap: square
 paint:
-  line-color: rgba(194,94,184, 0.6) # lch(55,60,330)
+  line-color: black
   line-width:
     - interpolate
-    - [exponential, 1.3]
+    - [exponential, 1.35]
     - [zoom]
     - 4
-    - 3
+    - 1.1
+    - 12
+    - 1.8
     - 20
-    - 6
-  line-dasharray: [4, 1, 2, 1]
+    - 4
+  line-dasharray: [12, 3, 4, 3, 4, 3]
