--- a/style/admin-4.yaml
+++ b/style/admin-4.yaml
@@ -8,13 +8,15 @@ layout:
   line-join: bevel
   line-cap: square
 paint:
-  line-color: rgba(194,94,184, 0.6) # lch(55,60,330)
+  line-color: black
   line-width: 
     - interpolate
-    - [exponential, 1.3]
+    - [exponential, 1.35]
     - [zoom]
-    - 6
-    - 2
+    - 4
+    - .9
+    - 12
+    - 1.2
     - 20
-    - 8
-  line-dasharray: [8, 2]
+    - 3
+  line-dasharray: [10, 3]
