--- a/style/admin-6.yaml
+++ b/style/admin-6.yaml
@@ -7,13 +7,15 @@ layout:
   line-join: bevel
   line-cap: square
 paint:
-  line-color: rgba(194,94,184, 0.6) # lch(55,60,330)
+  line-color: black
   line-width:
     - interpolate
-    - [exponential, 1.3]
+    - [exponential, 1.35]
     - [zoom]
-    - 8
-    - 2
+    - 4
+    - .6
+    - 12
+    - 1
     - 20
-    - 8
-  line-dasharray: [4, 2]
+    - 3
+  line-dasharray: [7, 2, 3, 2]
