--- a/style/admin-8.yaml
+++ b/style/admin-8.yaml
@@ -3,18 +3,17 @@ source: spirit
 source-layer: admin
 type: line
 filter: [==, [get, admin_level], 8]
-
 layout:
   line-join: bevel
   line-cap: square
 paint:
-  line-color: rgba(194,94,184, 0.6) # lch(55,60,330)
+  line-color: black
   line-width:
     - interpolate
     - [exponential, 1.3]
     - [zoom]
-    - 14
-    - 2
+    - 10
+    - 1
     - 20
-    - 4
-  line-dasharray: [20, 5]
+    - 2.5
+  line-dasharray: [3, 3]
