Handle odd admin_levels
Treat odd admin_level values like the next level down

--- a/style/admin-6.yaml
+++ b/style/admin-6.yaml
@@ -2,7 +2,7 @@ id: admin-6
 source: spirit
 source-layer: admin
 type: line
-filter: [==, [get, admin_level], 6]
+filter: [in, [get, admin_level], [literal, [5, 6]]]
 layout:
   line-join: bevel
   line-cap: square
