--- a/style/admin-4.yaml
+++ b/style/admin-4.yaml
@@ -2,7 +2,7 @@ id: admin-4
 source: spirit
 source-layer: admin
 type: line
-filter: [==, [get, admin_level], 4]
+filter: [in, [get, admin_level], [literal, [3, 4]]]
 layout:
   line-join: bevel
   line-cap: square
