--- a/style/admin-8.yaml
+++ b/style/admin-8.yaml
@@ -2,7 +2,7 @@ id: admin-8
 source: spirit
 source-layer: admin
 type: line
-filter: [==, [get, admin_level], 8]
+filter: [in, [get, admin_level], [literal, [7, 8]]]
 layout:
   line-join: bevel
   line-cap: square
