Add airports, and adjust water and transport colours
This establishes better contrast between the two blues

--- a/style/transit-points.yaml
+++ b/style/transit-points.yaml
@@ -12,7 +12,11 @@ layout:
         - station
       - bus_station
       - bus_stop
+    - tram
+    - bus_stop
     - subway
     - subway
+    - airplane
+    - airplane
     - wetland
   icon-allow-overlap: true
