--- a/style/water-line-text.yaml
+++ b/style/water-line-text.yaml
@@ -3,8 +3,8 @@ source: spirit
 source-layer: water-lines
 type: symbol
 paint:
-  text-color: '#0868AD'
-  text-halo-color: '#EFF2FB'
+  text-color: '#1e596a' #lch(35,20,230)
+  text-halo-color: '#e6f3f8' #lch(95,5,230)
   text-halo-width: 1.5
   text-halo-blur: 1
 minzoom: 12
