Add bridge support

--- a/spirit.yaml
+++ b/spirit.yaml
@@ -18,6 +18,8 @@ layers:
   - !!inc/file style/transport-base-fill.yaml
   - !!inc/file style/transport-casing.yaml
   - !!inc/file style/transport-fill.yaml
+  - !!inc/file style/transport-bridge-casing.yaml
+  - !!inc/file style/transport-bridge-fill.yaml
   - !!inc/file style/transit-points.yaml
   - !!inc/file style/admin-background.yaml
   - !!inc/file style/admin-background-dashed.yaml
