--- a/style/road-tunnel-casing.yaml
+++ b/style/road-tunnel-casing.yaml
@@ -1,4 +1,4 @@
-id: transport-casing
+id: road-tunnel-casing
 source: spirit
 source-layer: transport
 type: line
@@ -31,14 +31,14 @@ filter:
           - - footway
             - cycleway
       - [">=", [zoom], 15]
-  - ['!', [get, tunnel]]
-  - ['!', [get, bridge]]
+  - [get, tunnel]
 paint:
+  line-dasharray: [.5, .5]
   line-color:
     - match
     - [get, highway]
     - motorway
-    - '#b40017' # lch(35,80,30)
+    - '#e19991' # 
     - trunk
     - '#bd5c00' # lch(50,70,60)
     - primary
