--- a/style/road-base-casing.yaml
+++ b/style/road-base-casing.yaml
@@ -1,7 +1,7 @@
 # A layer at the base of the transport stack, covering tunnels, as well as round end-caps for anything else
 id: road-base-casing
 source: spirit
-source-layer: transport
+source-layer: roads
 type: line
 filter:
   - any
