--- a/style/road-bridge-fill.yaml
+++ b/style/road-bridge-fill.yaml
@@ -1,6 +1,6 @@
 id: road-bridge-fill
 source: spirit
-source-layer: transport
+source-layer: roads
 type: line
 # This messy filter could be done with a [step, [zoom], ..., N, ...] but this
 # would require re-stating the conditions for all lower zoom for each step.
