--- a/config.yaml
+++ b/config.yaml
@@ -95,6 +95,20 @@ vector_layers:
             extent: 4096
             buffer: 16
             file: sql/railways-high.sql.jinja2
+    aeroways:
+        description: Runways and other aeroways
+        fields: {}
+        sql:
+          - minzoom: 12
+            maxzoom: 14
+            extent: 1024
+            buffer: 8
+            file: sql/aeroways.sql.jinja2
+          - minzoom: 15
+            maxzoom: 15
+            extent: 4096
+            buffer: 64 # Runways get wide at high zooms, so they need an extra-large buffer
+            file: sql/aeroways.sql.jinja2
     transit-points:
         description: Transit-oriented points
         fields:
