--- a/style/rail-bridge-outer-casing.yaml
+++ b/style/rail-bridge-outer-casing.yaml
@@ -1,4 +1,4 @@
-id: rail-casing
+id: rail-bridge-outer-casing
 source: spirit
 source-layer: railways
 type: line
@@ -8,23 +8,18 @@ filter:
     - [get, railway]
     - - literal
       - - rail
-  - ['!', [get, tunnel]]
-  - ['!', [get, bridge]]
+  - [get, bridge]
 paint:
-  line-color:
-    - case
-    - [get, minor]
-    - '#aaa'
-    - '#5e5e5e'
+  line-color: black
   line-width:
     - interpolate
     - - exponential
       - 1.35
     - - zoom
     - 12
-    - 3
+    - 5
     - 20
-    - 14
+    - 20
 layout:
   line-cap: butt
   line-sort-key:
