--- a/style/background.yaml
+++ b/style/background.yaml
@@ -3,4 +3,4 @@ type: background
 layout:
   visibility: visible
 paint:
-  background-color: '#eff2ec'
+  background-color: '#eff2ec' # lch(95,3,130)
