--- a/style/landuse.yaml
+++ b/style/landuse.yaml
@@ -2,6 +2,24 @@ id: landuse
 source: spirit
 source-layer: landuse
 type: fill
+layout:
+  fill-sort-key:
+    - match
+    - [get, landuse]
+    - park
+    - 20
+    - education
+    - 10
+    - commercial
+    - 4
+    - retail
+    - 3
+    - residential
+    - 2
+    - industrial
+    - 1
+    - 0
+
 paint:
     fill-color: 
       - match
@@ -15,5 +33,7 @@ paint:
       - industrial
       - '#e0e3de' # lch(90,3,130)
       - education
-      - '#ece3b3' # lch(90,3,130)
+      - '#ece3b3' # lch(90,25,100)
+      - park
+      - '#cfe8df'
       - red
