--- a/spirit.yaml
+++ b/spirit.yaml
@@ -38,5 +38,6 @@ layers:
   - !!inc/file style/aeroway-text.yaml
   - !!inc/file style/road-text.yaml
   - !!inc/file style/water-line-text.yaml
+  - !!inc/file style/landuse-names.yaml
   - !!inc/file style/building-names.yaml
 glyphs: https://go-spatial.github.io/carto-assets/fonts/{fontstack}/{range}.pbf
