Add more icons, and make them more uniform
This uses icons from the US NPS for airports, buses, and trains,
and SJJB for subways.

--- a/style/transit-points.yaml
+++ b/style/transit-points.yaml
@@ -3,7 +3,7 @@ source: spirit
 source-layer: transit-points
 type: symbol
 layout:
-  icon-image: 
+  icon-image:
     - match
     - [get, mode]
     - bus
@@ -16,8 +16,10 @@ layout:
     - bus_stop
     - subway
     - subway
+    - train
+    - train
     - airplane
-    - airplane
+    - airport
     - wetland
   icon-allow-overlap: true
   text-optional: true
