--- a/style/road-base-fill.yaml
+++ b/style/road-base-fill.yaml
@@ -30,31 +30,7 @@ filter:
     - [==, [get, highway], service]
     - [">=", [zoom], 15]
 paint:
-  line-color:
-    - match
-    - [get, highway]
-    - motorway
-    - - case
-      - [get, tunnel]
-      - '#e19991' # lch(70,30,30)
-      - '#e52838' # lch(50,80,30)
-    - trunk
-    - '#ec822c' # lch(65,70,60)
-    - primary
-    - '#ec822c' # lch(65,70,60)
-    - secondary
-    - '#f7bd55' # lch(80,60,80)
-    - tertiary
-    - '#f7bd55' # lch(80,60,80)
-    - unclassified
-    - '#e0e3de' # lch(90,3,130)
-    - residential
-    - '#e0e3de' # lch(90,3,130)
-    - living_street
-    - '#e0e3de' # lch(90,3,130)
-    - service
-    - '#e0e3de' # lch(90,3,130)
-    - red
+  line-color: !!inc/file style/inc/road-fill-color.yaml
   line-width:
     - interpolate
     - - exponential
